<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".client.activities.WaitingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/jedi"
        android:id="@+id/jedi"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/jedi_team"
        android:textSize="32dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_team_button"
        android:id="@+id/button2"
        android:clickable="false"
        android:layout_centerHorizontal="true"
        android:onClick="changeTeam"
        android:layout_below="@+id/rosters" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sith"
        android:id="@+id/siths"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:textStyle="bold"
        android:textColor="@color/sith_team"
        android:textSize="32dp" />

    CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready_field"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:paddingTop="20dp"
        android:id="@+id/rosters">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jedi"
            android:id="@+id/jediLinearLayout"
            android:layout_above="@+id/button2"
            android:layout_weight="1"
            android:gravity="left">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/siths"
            android:id="@+id/sithLinearLayout"
            android:layout_above="@+id/button2"
            android:layout_weight="1"
            android:gravity="right">

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vs_string"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/chat_layout_waiting"
        android:layout_alignParentBottom="true"
        android:background="@color/no_color_for_all_your_needs_when_you_have_not_to_color_something">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chat"
            android:id="@+id/chat_title_waiting"
            android:textSize="30sp"
            android:textAlignment="center"
            android:singleLine="false" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/msg_scroll_waiting"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/msg_list_waiting"></LinearLayout>
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_waiting"
                android:hint="Enter your message"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send"
                android:id="@+id/button_send_waiting" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/background"
            android:layout_centerInParent="true" />
    </RelativeLayout>


</RelativeLayout>
